--- a/.env_sample
+++ b/.env_sample
@@ -1,3 +1,4 @@
 ACCESS_KEY = YOUR_AWS_KEY
 SECRET_KEY = YOUR_AWS_SECRET
 bucket = YOUR_AWS_BUCKET
+openweather_apikey = db378c3cab595944ca9c796ffff5055f
